--- a/Changes
+++ b/Changes
@@ -1,7 +1,10 @@
-# $Id: Changes,v 1.2 2007/01/20 19:09:45 comdog Exp $
+# $Id: Changes,v 1.3 2007/01/20 23:11:00 comdog Exp $
 0.10 - Fri Feb 20 15:44:55 2004
 	+ initial distribution created with scriptdist
 0.13 - Sat Jan 20 13:09:12 2007
 	* I've converted my iphoto-shell application to a modulino
 	called Mac::iPhoto::Shell
+
+0.14 - Sat Jan 20 17:10:35 2007
+	* Makefile now checks for and installs iPhoto glue
 
